--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -45,5 +45,5 @@ jobs:
           platforms: linux/amd64,linux/arm64 # ,linux/arm/v7
           push: true
           tags: |
-            OJ7/free-games-claimer:latest
-            ghcr.io/OJ7/free-games-claimer:latest
+            oj7/free-games-claimer:latest
+            ghcr.io/oj7/free-games-claimer:latest
