--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,8 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - "playstation-plus"
-      - "xbox-gold"
+      - "actions"
     paths-ignore:
       - ".github/**"
       - ".gitignore"
